; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_monitor.c_monitor_permit_authentications.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_monitor.c_monitor_permit_authentications.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mon_table = type { i32, i32* }

@mon_dispatch = common dso_local global %struct.mon_table* null, align 8
@MON_AUTH = common dso_local global i32 0, align 4
@MON_PERMIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @monitor_permit_authentications to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @monitor_permit_authentications(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mon_table*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.mon_table*, %struct.mon_table** @mon_dispatch, align 8
  store %struct.mon_table* %4, %struct.mon_table** %3, align 8
  br label %5

5:                                                ; preds = %35, %1
  %6 = load %struct.mon_table*, %struct.mon_table** %3, align 8
  %7 = getelementptr inbounds %struct.mon_table, %struct.mon_table* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %38

10:                                               ; preds = %5
  %11 = load %struct.mon_table*, %struct.mon_table** %3, align 8
  %12 = getelementptr inbounds %struct.mon_table, %struct.mon_table* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @MON_AUTH, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %35

17:                                               ; preds = %10
  %18 = load i32, i32* @MON_PERMIT, align 4
  %19 = xor i32 %18, -1
  %20 = load %struct.mon_table*, %struct.mon_table** %3, align 8
  %21 = getelementptr inbounds %struct.mon_table, %struct.mon_table* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = and i32 %22, %19
  store i32 %23, i32* %21, align 8
  %24 = load i32, i32* %2, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %17
  %27 = load i32, i32* @MON_PERMIT, align 4
  br label %29

28:                                               ; preds = %17
  br label %29

29:                                               ; preds = %28, %26
  %30 = phi i32 [ %27, %26 ], [ 0, %28 ]
  %31 = load %struct.mon_table*, %struct.mon_table** %3, align 8
  %32 = getelementptr inbounds %struct.mon_table, %struct.mon_table* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = or i32 %33, %30
  store i32 %34, i32* %32, align 8
  br label %35

35:                                               ; preds = %29, %10
  %36 = load %struct.mon_table*, %struct.mon_table** %3, align 8
  %37 = getelementptr inbounds %struct.mon_table, %struct.mon_table* %36, i32 1
  store %struct.mon_table* %37, %struct.mon_table** %3, align 8
  br label %5

38:                                               ; preds = %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
